# Scalable-RAG-Bot

./: .gitignore  Dockerfile  app.py  faiss_index.index  pyproject.toml  utils.py
data/: chunker.py  loader.py  test.py
embeddings/: embedder.py
index/: faiss_index.py
llm/: llm_model.py  prompt_template.py
retrieval/: retriever.py
schemas/: output_schema.py
storage/: database.py
